--- a/tex/3-architektura/3-pojecia-i-zasady.tex
+++ b/tex/3-architektura/3-pojecia-i-zasady.tex
@@ -1,7 +1,7 @@
 \subsection{Pojęcia i zasady}
 
 \subsubsection{Wstęp}
-Ta podsekcja dokumentuje Lupus w formie wyjaśniania zdefiniowanych na jego potrzeby pojęć, konceptów i zasad. Są one punktem wyjścia do dokładniejszych specyfikacji i zarazem zrozumienia architektury systemu. Sekcja ta zawiera wiele linków do definicji znajdujących się w załączniku i nie wszystkie pojęcia tłumaczone są w tej sekcji.
+Ta podsekcja dokumentuje Lupus w formie wyjaśniania zdefiniowanych na jego potrzeby pojęć, konceptów i zasad. Są one punktem wyjścia do dokładniejszych specyfikacji i zarazem zrozumienia architektury systemu. Sekcja ta zawiera wiele odnośników do definicji znajdujących się w załącznikach i nie wszystkie pojęcia tłumaczone są w tej sekcji.
 
 \subsubsection{Problem zarządzania}
 
@@ -9,92 +9,92 @@ W rzeczywistym świecie często napotkamy sytuacje, w których byłoby dobrze, g
 
 \begin{itemize}
     \item chcielibyśmy, aby samochody miały funkcję regulującą pracę silnika w celu utrzymania stałej prędkości,
-    \item przydałoby się, gdyby lodówka mogła utrzymywać chłodną, ale nie ujemną temperaturę, niezależnie od tego, jak często otwierane są drzwi lub jaka jest temperatura na zewnątrz w danym dniu,
+    \item przydałoby się, gdyby lodówka mogła utrzymywać chłodną, ale nie ujemną temperaturę, niezależnie od tego, jak często otwierane są drzwi lub jaka jest temperatura na zewnątrz,
     \item byłoby korzystne, gdyby serwer w chmurze mógł zagwarantować, że aplikacja z wystarczającymi zasobami do pokrycia potrzeb użytkowników będzie uruchomiona i działała.
 \end{itemize}
 
-Problemy wymienione powyżej można traktować jako \textbf{problemy zarządzania} (ang. \textit{management problem}). Nazwa bierze się stąd, że nie ma żadnych technicznych ograniczeń uniemożliwiających osiągnięcie tych celów. Wszystkie wymienione systemy są odpowiednio wyposażone np. możemy dodać więcej paliwa do silnika lub dostarczyć więcej mocy do sprężarki w lodówce. Problem leży w faktycznym wykonaniu tych czynności w odpowiednich momentach np. dodanie więcej paliwa, gdy auto zwalnia lub dostarczenie większej mocy gdy temperatura w lodówce wzrasta. Dlatego jest to problem czystego zarządzania.
+Problemy wymienione powyżej można traktować jako \textbf{problemy zarządzania} (ang. \textit{management problems}). Nazwa bierze się stąd, że nie ma żadnych technicznych ograniczeń uniemożliwiających osiągnięcie tych celów. Wszystkie wymienione systemy są odpowiednio wyposażone; np. możemy dodać więcej paliwa do silnika lub dostarczyć więcej mocy do sprężarki w lodówce. Problem leży w faktycznym wykonaniu tych czynności w odpowiednich momentach np. dodanie więcej paliwa, gdy auto zwalnia lub dostarczenie większej mocy gdy temperatura w lodówce wzrasta. Dlatego jest to problem czystego zarządzania.
 
-Za to system, którym chcemy zarządzać nazywamy \textbf{zarządzanym systemem} (ang. \textit{managed system}). 
+Systemem, którym chcemy zarządzać nazywamy \textbf{System Zarządzany} (ang. \textit{managed system}). 
 
-\subsubsection{System kontroli}
+\subsubsection{System Sterowania}
 
-\textbf{System kontroli} (ang. \textit{Control System\footnote{innym tłumaczeniem na polski jest "regulator"}}) to system, który reguluje pracą \textbf{zarządzanego systemu}. Na przykład:
+\textbf{System Sterowania} (ang. \textit{Control System\footnote{innym tłumaczeniem na polski jest "regulator"}}) to system, który reguluje pracą \textbf{Systemu Zarządzanego}. Przykładowo jest to:
 \begin{itemize}
     \item tempomat, który reguluje pracą silnika w celu utrzymania stałej prędkości,
     \item lodówka, która reguluje pracą sprężarki w celu utrzymania stałej, chłodnej temperatury
     \item Kubernetes, który reguluje liczbę działających Podów, aby utrzymać pożądaną dostępności aplikacji
 \end{itemize}
 
-Innymi słowy mówiąc \textbf{System kontroli} rozwiązuje \textbf{Problem Zarządzania}.
+Innymi słowy mówiąc \textbf{System Sterowania} rozwiązuje \textbf{Problem Zarządzania}.
 
-\subsubsection{Pętla sterowania}
+\subsubsection{Pętla Sterowania}
 
 Ogólną architekturą \textbf{Systemów Kontroli} używaną do rozwiązywania \textbf{Problemów Zarządzania} jest \textbf{Pętla Sterowania}.
 
 Pętle sterowania są klasyfikowane w zależności od tego, czy wykorzystują mechanizmy sprzężenia zwrotnego (ang. \textit{feedback mechanism}):
 \begin{itemize}
     \item \textbf{Otwarte Pętle Sterowania}: Akcja Sterująca (ang. \textit{Control Action}) (czyli wejście do \textbf{Systemu Zarządzanego}) jest niezależne od wyjścia \textbf{Systemu Zarządzanego}.
-    \item \textbf{Zamknięte Pętle Sterowania}: Wyjście \textbf{Systemu Zarządzanego} jest sprzężane do wejścia \textbf{Systemu Kontroli} i wpływa na Akcję Sterującą. 
+    \item \textbf{Zamknięte Pętle Sterowania}: Wyjście \textbf{Systemu Zarządzanego} jest sprzężane do wejścia \textbf{Systemu Sterowania} i wpływa na Akcję Sterującą. 
 \end{itemize}
 
 W Lupus bierzemy pod uwagę wyłącznie zamknięte pętle sterowania.
 
 \subsubsection{Zamknięta Pętla Sterowania}
 
-Jest to punk wyjściowy (startowy) dla naszej architektury referencyjnej (rys \ref{fig:33-arch}).
+Jest to punk wyjściowy dla naszej architektury referencyjnej (rys \ref{fig:33-arch}).
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{33-arch.png}
     \caption{Architektura referencyjna dla Lupus}\label{fig:33-arch}
 \end{figure}
 
-Architektura (rys. \ref{fig:33-arch}) należy czytać mając na uwadze następujące definicje:
+Architekturę (rys. \ref{fig:33-arch}) należy czytać mając na uwadze następujące definicje:
 
 \begin{itemize}
-    \item \textbf{System Sterowania (ang. \textit{Control System})} - system, który rozwiązuje \textbf{Problem Zarzadzania} \textbf{Zarządzanego Systemu} za pomocą \textbf{Zamkniętej Pętli Sterowania}. W każdej iteracji \textbf{System Sterowania} analizuje \textbf{Sprzeżenie Zwrotne} (ang. \textit{Control Feedback}) i \textit{wnioskuje} \textbf{Akcje Sterującą}.
-    \item \textbf{Zamknięta Pętla Sterowania} - nieskończona pętla, która reguluje stan \textbf{Zarządzanego Systemu}, iteracyjnie zbliżając jego \textbf{Aktualny Stan} do \textbf{Stanu Pożądanego}. 
-    \item \textbf{Akcja Sterująca (ang. \textit{Control Action})} - akcja wykonywana na \textbf{Zarządzanym Systemie}, która ma na celu przybliżenie go do \textbf{Stanu Pożądanego}.
+    \item \textbf{System Sterowania} (ang. \textit{Control System}) - system, który rozwiązuje \textbf{Problem Zarzadzania} występujący \textbf{Systemie Zarządzanym} za pomocą \textbf{Zamkniętej Pętli Sterowania}. W każdej iteracji \textbf{System Sterowania} analizuje \textbf{Sprzeżenie Zwrotne} (ang. \textit{Control Feedback}) i \textit{wnioskuje} \textbf{Akcje Sterującą}.
+    \item \textbf{Zamknięta Pętla Sterowania} - nieskończona pętla, która reguluje stan \textbf{System Zarządzanego}, iteracyjnie zbliżając jego \textbf{Stan Aktualny} do \textbf{Stanu Pożądanego}. 
+    \item \textbf{Akcja Sterująca} (ang. \textit{Control Action}) - akcja wykonywana na \textbf{Zarządzanym Systemie}, która ma na celu przybliżenie go do \textbf{Stanu Pożądanego}.
     \item \textbf{Sprzeżenie zwrotne} (ang. \textit{Control Feedback}) - reprezentacja \textbf{Aktualnego Stanu} wysyłana z (odbierana od) \textbf{Systemu Zarządzanego}.
 \end{itemize}
 
 W powyższej architekturze Lupus pełni rolę \textbf{Systemu Sterowania}.
 
 \subsubsection{Agenci Translacyjni}
-Z racji, że każdy system, bez żadnych modyfikacji (\ref{reg:7}) może wejść w rolę \textbf{Zarządzanego Systemu}, potrzebujemy warstwy integracji między \textbf{systemem zarządzanym} a Lupus, podobna do koncepcji "API Broker" w architekturze ENI (rys. \ref{fig:23-eni-arch}). Tak narodziła się koncepcja \textbf{Agentów Translacyjnych} (ang. \textit{Trasnlation Agents}). 
+Z racji, że każdy system, bez żadnych modyfikacji (\hyperref[req:7]{Wymaganie 7}) może wejść w rolę \textbf{Systemu Zarządzanego}, potrzebujemy warstwy integracji między \textbf{System Zarządzanym} a Lupus, podobna do koncepcji "API Broker" w architekturze ENI (rys. \ref{fig:23-eni-arch}). Tak narodziła się koncepcja \textbf{Agentów Translacji} (ang. \textit{Trasnlation Agents}). 
 
 W każdym \textbf{wdrożeniu Lupus}, \textbf{użytkownik} musi stworzyć \textbf{Agentów Translacyjnych}. 
 
 Z punktu wiedzenia komunikacji, każdego \textbf{Agenta Translacyjnego} możemy podzielić na dwie części:
 \begin{itemize}
-    \item Część komunikująca się z \textbf{Systemem Zarządzanym}. Jest to zewnętrzna względem Lupus i nie podlega żadnej specyfikacji.
-    \item Część komunikująca się z Lupus. Musi być zgodne z jednym z interfejsów Lupus. \textbf{Lupin} lub \textbf{Lupout}.
+    \item Część komunikująca się z \textbf{Systemem Zarządzanym}. Jest zewnętrzna względem Lupus i nie podlega żadnej specyfikacji.
+    \item Część komunikująca się z Lupus. Musi być zgodna z jednym z interfejsów Lupus. \textbf{Lupin} lub \textbf{Lupout}.
 \end{itemize}
 
-Mamy dwóch \textbf{Agentów Sterowania}, jeden do komunikacji przychodzącej (ang. \textit{Ingress}) i jeden do wychodzącej (ang. \textit{Egress}). 
+Mamy dwóch \textbf{Agentów Translacji}, jeden do komunikacji przychodzącej (ang. \textit{Ingress}) i jeden do wychodzącej (ang. \textit{Egress}). 
 
-W każdej iteracji pętli zadaniem \text{Agenta Ingress} jest odbieranie/zbieranie \textbf{Sprzężenia Zwrotnego} z \textbf{Systemu Zarządzanego} i translacja go na format zrozumiały przez Lupus za pomocą \textbf{Interfejsu Lupin}. Z kolei zadaniem \textbf{Agenta Egress} jest odbieranie \textbf{final-data}'y i translacja jej na \text{Ackje Sterowania}, która później zostaje wysłana do (lub przeprowadzona na) \text{Systemie Zarządzanym}.
+W każdej iteracji pętli zadaniem \text{Agenta Ingress} jest odbieranie/zbieranie \textbf{Sprzężenia Zwrotnego} z \textbf{Systemu Zarządzanego} i translacja go na format zrozumiały przez Lupus za pomocą \textbf{Interfejsu Lupin}. Z kolei zadaniem \textbf{Agenta Egress} jest odbieranie \textbf{final-data}'y i translacja jej na \textbf{Akcję Sterowania}, która później zostaje wysłana do (lub przeprowadzona na) \textbf{Systemie Zarządzanym}.
 
-Architektura wraz z wprowadzeniem \textbf{Agentów Translacji} ukaza jest na rysunku \ref{fig:33-arch2}.
+Architektura wraz z wprowadzeniem \textbf{Agentów Translacji} ukazana jest na rysunku \ref{fig:33-arch2}.
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{33-arch2.png}
     \caption{Architektura referencyjna z agentami translacji}\label{fig:33-arch2}
 \end{figure}
 
-Specyfikacja interfejsów \textbf{Lupin} oraz \textbf{Lupout} zawarta jest w załączniku //TODO.
+Specyfikacja interfejsów \textbf{Lupin} oraz \textbf{Lupout} zawarta jest w \hyperref[appendix:4]{Załączniku 4}.
 
 \subsubsection{Workflow pętli}
 
-Kiedy Lupus otrzyma \textbf{Aktualny Stan} poprzez interfejs \textbf{Lupin}, rozpoczyna się \textbf{Workflow Pętli}, które ma na celu dostarczać \textbf{Logikę Pętli} (ang. \textit{Loop Logic}) i składa się z \textbf{Elementów Pętli} (ang. \textit{Loop elements}). 
+Kiedy Lupus otrzyma \textbf{Stan Aktualny} poprzez interfejs \textbf{Lupin}, rozpoczyna się \textbf{Workflow Pętli}, które ma na celu dostarczać \textbf{Logikę Pętli} (ang. \textit{Loop Logic}) i składa się z \textbf{Elementów Pętli} (ang. \textit{Loop elements}). 
 
 Elementem pętli może być zarówno:
 \begin{itemize}
-    \item \textbf{Element Lupus}, który działa w warstwie sterowania Kubernetes a jego misją jest wykonywać \textit{Workflow Pętli}
+    \item \textbf{Element Lupus}, który działa w warstwie sterowania Kubernetes a jego misją jest wykonywać \textbf{Workflow Pętli}
     \item referencja do \textbf{Elementu Zewnętrznego}, który działa poza warstwą sterowania Kubernetes a jego misją jest wykonywać \textbf{Część Obliczeniową} \textbf{Logiki Pętli}
 \end{itemize}
 
-\textbf{Workflow Pętli} jest wyrażany w \textbf{LupN}, specjalnej notacji do opisywania workflow pętli, której dokładna specyfikacja znajduje się w załączniku //TODO.
+\textbf{Workflow Pętli} jest wyrażany w \textbf{LupN}, specjalnej notacji do opisywania workflow pętli, której dokładna specyfikacja znajduje się w \hyperref[appendix:3]{Załączniku 3}
 
 Przykładowe \textbf{workflow pętli} pokazano na rysunku \ref{fig:33-workflow}
 
@@ -112,25 +112,23 @@ Przykładowe \textbf{workflow pętli} pokazano na rysunku \ref{fig:33-workflow}
 
 \textbf{Elementy Zewnętrzne} to zazwyczaj serwery HTTP (w szczególności serwery Open Policy Agent).
 
-Jeden \textbf{Element Lupus} może komunikować się z żadnym, jednym lub wieloma \textbf{lementami zewnętrznymi}, a liczba ta może się różnić w każdej iteracji pętli.
+Jeden \textbf{Element Lupus} może komunikować się z żadnym, jednym lub wieloma \textbf{Elementami Zewnętrznymi}, a liczba ta może się różnić w każdej iteracji pętli.
 
 \subsubsection{Dane i Akcje}
 
-\textbf{Dane} (ang. \textit{data}) to nośnik informacji w ramach jednej iteracji pętli w postaci JSON. Na wejściu \textbf{Elementu Ingress} reprezentują one \textbf{aktualny stan} (ang. \textit{current state}) \textbf{Systemu Zarządzanego}. Następnie, w trakcie iteracji pętli, to projektant decyduje jakie informacje będą przenosić. Zazwyczaj są to informacje związane z \textbf{logiką pętli} takie jak wejścia (ang. \textit{inputs}) do \textbf{Elementów Zewnętrznych} oraz ich odpowiedzi. Na końcu iteracji, gdy \textbf{dane} trafiają do \textbf{Agenta Egress} muszę reprezentować \textbf{Akcję Sterowania}. 
+\textbf{Dane} (ang. \textit{data}) to nośnik informacji w ramach jednej iteracji pętli w formacie JSON. Na wejściu \textbf{Elementu Ingress} reprezentują one \textbf{Stan Aktualny} \textbf{Systemu Zarządzanego}. Następnie, w trakcie iteracji pętli, \textbf{Projektant} decyduje jakie informacje będą przenosić. Zazwyczaj są to informacje związane z \textbf{Logiką Pętli} takie jak wejścia (ang. \textit{inputs}) do \textbf{Elementów Zewnętrznych} oraz ich odpowiedzi. Na końcu iteracji, gdy \textbf{dane} trafiają do \textbf{Agenta Egress} muszą reprezentować \textbf{Akcję Sterowania}. 
 
-Działanie pojedynczego \textbf{Elementu Lupus} jest opisane poprzez \textbf{Workflow Akcji}. \textbf{Akcja} wykonują różne operacje na \textbf{danych}. Istnieje wiele rodzajów akcji, a kluczowym typem akcji jest "Send", która pozwala komunikować się \textbf{Elementowi Lupus} z \textbf{Elementem Zewnętrznym}. Inne typy akcji służą organizacji danych.
+Działanie pojedynczego \textbf{Elementu Lupus} jest opisane poprzez \textbf{Workflow Akcji}. \textbf{Akcje} wykonują różne operacje na \textbf{danych}. Istnieje wiele rodzajów akcji, a kluczowym typem akcji jest "Send", która pozwala komunikować się \textbf{Elementowi Lupus} z \textbf{Elementem Zewnętrznym}. Inne typy akcji służą organizacji danych.
 
 //TODO daj tu przykładowe workflow akcji
 
-Pełna specyfikacja \textbf{Danych} znajduje się w //TODO, zaś pełna specyfikacja \textbf{Akcji} w załączniku //TODO.
+Pełna specyfikacja \textbf{Danych} znajduje się w \hyperref[appendix:5]{Załączniku 5}, zaś pełna specyfikacja \textbf{Akcji} w \hyperref[appendix:6]{Załączniku 6}.
 
 \subsubsection{Open Policy Agent}
 
 Open Policy Agent (OPA) to otwartoźródłowe narzędzie przeznaczone do definiowania, egzekwowania i zarządzania politykami w systemach oprogramowania. Systemy informatyczne odpytują serwery OPA podczas wykonywania operacji, które wymagają decyzji (decyzji dostępu, konfiguracji czy zachowania aplikacji). Dzięki takiemu podejściu można oddzielić logikę podejmowania decyzji od kodu aplikacji, co zwiększa modularność, wprowadza centralny punkt zarządzania politykami oraz ułatwia utrzymanie systemów.
 
-Polity w OPA definiowane są w języku Rego. Jest to deklaratywny język stworzony specjalnie na potrzeby OPA. Pozwala na tworzenie złożonych reguł i logiki decyzji.
-
-//TODO official site
+Polityki w OPA definiowane są w języku Rego. Jest to deklaratywny język stworzony specjalnie na potrzeby OPA. Pozwala na tworzenie złożonych reguł i logiki decyzji. Oficjalna strona projektu dostępna jest pod linkiem: \url{https://www.openpolicyagent.org}.
 
 \begin{lstlisting}[language=sh, caption={\emph{Przykładowy kod rego}}\label{lst:1}]
 allow {
