--- a/tex/appendix/1-definicje.tex
+++ b/tex/appendix/1-definicje.tex
@@ -1,3 +1,43 @@
 \appendix{Definicje Lupus}\label{appendix:1}
 
 Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://github.com/0x41gawor/lupus/blob/master/docs/defs.md}.
+
+\acronym{Problem Zarządzania (ang. \textit{Management Problem})}{}
+
+\acronym{System Zarządzany (ang. \textit{Managed System})}{}
+
+\acronym{System Sterowania (ang. \textit{Control System})}{}
+\acronym{Pętla Sterowania (ang. \textit{Control Loop})}{}
+\acronym{Zamknięta Pętla Sterowania (ang. \textit{Closed Control Loop})}{}
+\acronym{Akcja Sterująca (ang. \textit{Control Action})}{}
+\acronym{Sprzeżenie Zwrotne (ang. \textit{Control Feedback})}{}
+\acronym{Stan Aktualny (ang. \textit{Current State})}{}
+\acronym{Stan Pożądany (ang. \textit{Desired State})}{}
+\acronym{Pętla Sterowania (ang. \textit{Control Loop})}{}
+\acronym{Wdrożenie Lupus (ang. \textit{Lupus deployment, Lupus usage or Lupus application})}{}
+\acronym{Użytkownik (ang. \textit{User})}{}
+\acronym{Agent Translacji (ang. \textit{Translation Agent})}{}
+\acronym{Interfejs Lupin (ang. \textit{Lupin interface})}{}
+\acronym{Interfejs Lupout (ang. \textit{Lupout interface})}{}
+\acronym{Interfejsy Lupus} (ang. \textit{Lupus interfaces}){}
+\acronym{Finalne dane (ang. \textit{Final Data})}{}
+\acronym{Workflow Pętli (ang. \textit{Loop Workflow})}{}
+\acronym{Logika Pętli (ang. \textit{Loop logic})}{}
+\acronym{Element Pętli (ang. \textit{Loop Element})}{}
+\acronym{Element Lupus (ang. \textit{Lupus Element})}{}
+\acronym{Element Zewnętrzny (ang. \textit{External Element})}{}
+\acronym{Część Obliczeniowa (ang. \textit{Computing Part})}{}
+\acronym{LupN (ang. \textit{LupN})}{}
+\acronym{Element Ingres (ang. \textit{Ingress Element})}{}
+\acronym{Element Egress (ang. \textit{Egress Element})}{}
+\acronym{Open Policy Agent (ang. \textit{Open Policy Agent})}{}
+\acronym{Dane (ang. \textit{Data})}{}
+\acronym{kod LupN (ang. \textit{LupN code})}{}
+\acronym{plik LupN (ang. \textit{LupN file})}{}
+\acronym{Element (ang. \textit{Element})}{}
+\acronym{Master (ang. \textit{Master})}{}
+\acronym{Pole Danych (ang. \textit{Data Field})}{}
+\acronym{Użytkownik (ang. \textit{User})}{}
+\acronym{Użytkownik (ang. \textit{User})}{}
+\acronym{Użytkownik (ang. \textit{User})}{}
+
