--- a/tex/util/acronym-list.tex
+++ b/tex/util/acronym-list.tex
@@ -14,3 +14,22 @@
 \acronym{Kognitywność (ang. \textit{cognition})}{Proces rozumienia danych oraz informacji w celu produkcji nowych danych, informacji oraz wiedzy}\label{def:kognitywność}
 
 \acronym{System kognitywny}{System, który uczy się, wnioskuje oraz podejmuje decyzje w sposób przypominający ludzki umysł}\label{def:system-kognitywny}
+
+\acronym{System ENI}{}
+
+\acronym{Regulator (ang. \textit{Control System})}{}
+
+\acronym{Warstwa Sterowania (ang. \textit{Control Plane})}{}
+
+\acronym{Wzorzec Operator (ang. \textit{Operator Pattern})}{}
+
+\acronym{Definicje Zasobów Własnych (ang. \textit{Custom Resource Definitions})}{}
+
+\acronym{Zasoby Własne (ang. \textit{Custom Resources})}{}
+
+\acronym{Sterowany danymi (ang. \textit{Data-Driven})}{}
+
+\acronym{kontrolera (ang. \textit{controller})}{}
+
+\acronym{obiekt API (ang. \textit{API object})}{}
+
