--- a/tex/2-stan-wiedzy/5-teoria-sterowania.tex
+++ b/tex/2-stan-wiedzy/5-teoria-sterowania.tex
@@ -10,11 +10,11 @@ W tym celu potrzebny jest regulator (ang. \textit{control system}). Regulator za
     \caption{Układ automatycznej regulacji (UAR)}\label{fig:25-uar}
 \end{figure}
 
-Jeśli chcemy kontrolować wyjście danego obiektu zamykamy układ sprzężeniem zwrotnym. Wykonujemy pomiaru sygnał wyjściowego $y(t)$  i porównujemy z sygnałem odniesienia $w(t)$ (\textit{ang. set point}). Otrzymujemy w ten sposób \textit{uchyb regulacji} $e(t)$, który trafia do regulatora. Regulator przetwarza dostarczony mu uchyb i na tej podstawie wytwarza sygnał sterujący \textit{zarządzanym obiektem}, czyli sygnał $u(t)$ zwany również wymuszeniem.
+Jeśli chcemy kontrolować wyjście danego obiektu zamykamy układ sprzężeniem zwrotnym. Wykonujemy pomiaru sygnał wyjściowego $y(t)$  i porównujemy z sygnałem odniesienia $w(t)$ (\textit{ang. set point}). Otrzymujemy w ten sposób \textit{uchyb regulacji} $e(t)$, który trafia do regulatora. Regulator przetwarza dostarczony mu uchyb i na tej podstawie wytwarza sygnał sterujący zarządzanym obiektem, czyli sygnał $u(t)$ zwany również wymuszeniem.
 
-Przykładem może być układ regulacji temperatury obiektu, gdzie regulator ma postać przekaźnika dwupołożeniowego. Jeżeli jest za zimno załącza się stan wysoki, czyli ogrzewanie. Jeżeli jest za gorąco włącza się stan niski czyli chłodzenie. Punktem odniesienia $w(t)$ jest tutaj temperatura 21 stopni. Gdy \textit{pomiar} $y(t)$ znajduje się poniżej tej wartości, obliczany \textit{uchyb regulacji} $e(t)$ przyjmuje wartość dodatnią. Regulator jest zaprogramowan w taki sposób (wykonuje taki algorytm), że w takim przypadku jego wyjscie $u(t)$ przyjmuje położenie wysokie (wartość 1). Obiekt z kolei, pobudzony takim sygnałem na wejściu podnosi swoją temperaturę. Analogiczny tok rozumowania można przeprowadzić w przypadku, gdy $e(t)$ jest ujemne. 
+Przykładem może być układ regulacji temperatury obiektu, gdzie regulator ma postać przekaźnika dwupołożeniowego (Rys. \ref{fig:25-termostat}). Jeżeli jest za zimno załącza się stan wysoki, czyli ogrzewanie. Jeżeli jest za gorąco włącza się stan niski czyli chłodzenie. Punktem odniesienia $w(t)$ jest tutaj temperatura 21 stopni. Gdy \textit{pomiar} $y(t)$ znajduje się poniżej tej wartości, obliczany \textit{uchyb regulacji} $e(t)$ przyjmuje wartość dodatnią. Regulator jest zaprogramowany w taki sposób (wykonuje taki algorytm), że w tym przypadku jego wyjscie $u(t)$ przyjmuje położenie wysokie (wartość 1). Obiekt z kolei, pobudzony takim sygnałem na wejściu podnosi swoją temperaturę. Analogiczny tok rozumowania można przeprowadzić w przypadku, gdy $e(t)$ jest ujemne. 
 
-Oczywiście obiekt nie jest systemem dyskretnym, a cały proces dzieje się w układzie dynamicznym, stąd na wykresie \ref{fig:25-termostat} pomiaru obserwujemy sinusoidę. 
+Oczywiście obiekt nie jest systemem dyskretnym, a cały proces dzieje się w układzie dynamicznym, stąd na wykresie z rysunku \ref{fig:25-termostat} pomiaru obserwujemy sinusoidę. 
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{25-termostat.png}
