--- a/main.tex
+++ b/main.tex
@@ -22,11 +22,11 @@
 %------------------
 % Strona tytułowa
 %------------------
-\instytut{Instytut telekomunikacji}
+\instytut{Telekomunikacji}
 \kierunek{Telekomunikacja}
 \specjalnosc{Teleinformatyka i Zarządzanie w Telekomunikacji}
 \title{
-    Sworzenie platformy do modelowania i uruchamiania zamkniętych pętli sterowania w Kubernetes
+    Propozycja architektury platformy do modelowania i uruchamiania zamkniętych pętli sterowania w Kubernetes
 }
 \engtitle{
     Creation of a platform for designing and running closed control loops in Kubernetes
@@ -70,6 +70,7 @@
 \input{tex/2-stan-wiedzy/main.tex}
 \input{tex/3-architektura/main.tex}
 \input{tex/4-implementacja/main.tex}
+\input{tex/5-test/main.tex}
 
 %---------------
 % Literatura
