--- a/tex/3-architektura/4-instrukcja-uzycia.tex
+++ b/tex/3-architektura/4-instrukcja-uzycia.tex
@@ -20,13 +20,13 @@ Lupus jest zaimplementowany jako Niestandardowe Zasoby (ang. \textit{Custom Reso
 
 Pełna dokumentacje tego procesu znajduje się w \hyperref[appendix:2]{Załączniku 2}.
 
-\subsubsection{Implementacja Agentów Translacyjnych}
+\subsubsection{Implementacja Agentów Translacji}
 
 To użytkownik podczas \textbf{Wdrożenia} jest odpowiedzialny za implementację \textbf{Agentów Translacji}. Tylko użytkownik zna specyfikę swojego \textbf{Systemu Zarządzanego}. Stąd w zespole użytkownika potrzebne są umiejętności programistyczne. 
 
 Podczas implementacji należy kierować się specyfikacją \textbf{Interfejsów Lupus} zawartą w \hyperref[appendix:4]{Załączniku 4}.
 
-\subsubsection{Planowanie Workflow Pętli}
+\subsubsection{Planowanie Logiki Pętli}
 
 Workflow pętli powinno wyrazić \textbf{Logikę Pętli}, czyli w każdej iteracji doprowadzić \textbf{System Zarządzany} do \textbf{Stanu Pożądanego}. Użytkownik w tym kroku jedynie modeluje wysokopoziomowo workflow pętli, rysując np. jego diagram. Dopiero takie spojrzenie podpowie użytkownikowi jakich elementów zewnętrznych potrzebuje.
 
